# WEB_modul_02

./: Dockerfile  pyproject.toml
app_poetry/: AddressBook.py  Bot_new.py  logs.txt  main.py  my_logger.py  pyproject.toml
